<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/logintest"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/centered_background_one"
...
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle2"
                android:id="@+id/textField5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/email"
                android:paddingHorizontal="4dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black"
                app:endIconTint="@color/schemesSecondary">

...
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle2"
                android:id="@+id/textField6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/constrasena"
                android:paddingHorizontal="4dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black"
                app:endIconTint="@color/schemesSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textAppearanceBodyLarge"
                    android:inputType="textPassword"
                    android:importantForAutofill="yes"
...
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/section_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToOutline="true"
            android:layout_below="@id/section_8"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            >

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="203dp"
                android:minHeight="62dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/schemesOrange600"
...
