...
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal|center_vertical"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_producto_section_2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:clipToOutline="true"
        android:paddingTop="20dp"
        android:layout_below="@id/add_producto_section_1"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/simpleProductRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </RelativeLayout>

</RelativeLayout>
...
